--- a/index.html
+++ b/index.html
@@ -56,40 +56,17 @@
               </h3>
 
         </section>
-        <section class="photos1">
-            <div class="photo1">
-                <img src="razergreenheadphone.jpg" alt="image">
-                <!-- <h1>
-                    RAZER  |  RETROSUPERFUTURE
-                </h1>
-                <h2>
-                    FUTURE SIGHT. FUTURE STYLE
-                </h2>
-                <h3>
-                    <a href="#">Learn More></a>
-                </h3> -->
-        </div>
-            <div class="photo2">
-                <img src="blade18-b-950x580-desktop.jpg" alt="image">
+        <section class="ishika_varshney">
+            <div class="kushagra_chutiya">
+                <img src="razergreenheadphone.jpg" class="piyush" alt="image">
+                <p class="dev-playboy">Kushagra varshney</p>
             </div>
-            </section>
-            <!-- <section class="photos2">
-            
-            <div class="photo3">
-                <img src="razer-enki-pro-automobili-lamborghini-hero-desktop.jpg" alt="image">
-            </div>
-            <div class="photo4">
-                <img src="deathadder-v3-pro-faker-hero.jpg" alt="image">
-            </div>
-            </section>
-            <section class="photos3">
-            <div class="photo5">
-                <img src="razer-blackshark-v2-pro-2023_hero-desktop-1920x700 (1).jpg" alt="image">
-            </div>
-            <div class="photo6">
-                <img src="razer-edge-hero.jpg" alt="image">
-            </div>
-        </section> -->
+                <div class="kushagra_chutiya"><img src="blade18-b-950x580-desktop.jpg" class="piyush" alt="image"></div>
+                <div class="kushagra_chutiya"><img src="blade18-b-950x580-desktop.jpg" class="piyush" alt="image"></div>
+                <div class="kushagra_chutiya"><img src="blade18-b-950x580-desktop.jpg" class="piyush" alt="image"></div>
+                <div class="kushagra_chutiya"><img src="blade18-b-950x580-desktop.jpg" class="piyush" alt="image"></div>
+                <div class="kushagra_chutiya"><img src="blade18-b-950x580-desktop.jpg" class="piyush" alt="image"></div> 
+        </section> 
     </main>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
@@ -101,7 +78,7 @@
         const nav_header = document.querySelector(".header");
 
         const toggleNavbar = () => {
-            // alert("Plz Subscribe ");
+            alert("Plz Subscribe ");
             nav_header.classList.toggle("active");
         };
 
