--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="header">
-        <img src="https://assets2.razerzone.com/images/phoenix/razer-ths-logo.svg" alt="thapa technical logo" class="logo" />
+        <img src="https://assets2.razerzone.com/images/phoenix/razer-ths-logo.svg" alt="logo" class="logo" />
 
         <nav class="navbar">
             <ul class="navbar-list">
