--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <p class="dev-playboy">Kushagra varshney</p>
             </div>
                 <div class="kushagra_chutiya"><img src="blade18-b-950x580-desktop.jpg" class="piyush" alt="image"></div>
-                <div class="kushagra_chutiya"><img src="blade18-b-950x580-desktop.jpg" class="piyush" alt="image"></div>
+                <div class="kushagra_chutiya"><img src="razer-edge-hero.jpg" class="piyush" alt="image"></div>
                 <div class="kushagra_chutiya"><img src="blade18-b-950x580-desktop.jpg" class="piyush" alt="image"></div>
                 <div class="kushagra_chutiya"><img src="blade18-b-950x580-desktop.jpg" class="piyush" alt="image"></div>
                 <div class="kushagra_chutiya"><img src="blade18-b-950x580-desktop.jpg" class="piyush" alt="image"></div> 
